k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "testh2-namespace"
  labels:
    name: "testh2-namespace"
