k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-service
  namespace: "consumer-namespace"
spec:
  type: ClusterIP
  selector:
    app: consumer-application
  ports:
  - protocol: TCP
    port: 81
    targetPort: 8081
