k8s/netpol-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: consumer-networkpolicy-ingress
  namespace: "consumer-namespace"
spec:
  podSelector:
    matchLabels:
      app: consumer-application
  policyTypes:
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: "producer-namespace"
      podSelector:
        matchLabels:
          app: producer-application
    ports:
      - protocol: TCP
        port: 8081
